Правки в целом по проекту

--- a/public/css/pages/properties/index/page-home.css
+++ b/public/css/pages/properties/index/page-home.css
@@ -469,7 +469,7 @@ div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
   padding-left: 20px;
 }
 
-.table-for-others .last-update>td:first-child .last-update-item {
+.table-for-others .warning-item>td:first-child .warning-item-item {
   position: relative;
   -webkit-transform: translateY(0%);
   -ms-transform: translateY(0%);
@@ -477,7 +477,7 @@ div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
   right: -6px;
 }
 
-.last-update-item {
+.warning-item-item {
   background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M6.43196 2.41226L1.13821 11.2498C1.02907 11.4388 0.971319 11.6531 0.970708 11.8713C0.970097 12.0896 1.02665 12.3042 1.13473 12.4938C1.24282 12.6835 1.39867 12.8415 1.58678 12.9522C1.7749 13.0629 1.98871 13.1224 2.20696 13.1248H12.7945C13.0127 13.1224 13.2265 13.0629 13.4146 12.9522C13.6028 12.8415 13.7586 12.6835 13.8667 12.4938C13.9748 12.3042 14.0313 12.0896 14.0307 11.8713C14.0301 11.6531 13.9724 11.4388 13.8632 11.2498L8.56947 2.41226C8.45805 2.22858 8.30117 2.07671 8.11396 1.97131C7.92676 1.86592 7.71555 1.81055 7.50072 1.81055C7.28588 1.81055 7.07467 1.86592 6.88747 1.97131C6.70026 2.07671 6.54338 2.22858 6.43196 2.41226Z' stroke='%23F97474' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round' /%3e%3cpath d='M7.5 5.625V8.125' stroke='%23F97474' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round' /%3e%3ccircle cx='7.5' cy='10.625' r='0.625' fill='%23F97474' /%3e%3c/svg%3e");
   background-repeat: no-repeat;
   width: 15px;
@@ -492,16 +492,16 @@ div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
   z-index: 10;
 }
 
-.last-update>td {
+.warning-item>td {
   background-color: #FFECEC !important;
   position: relative;
 }
 
-.last-update>td:first-child .last-update-item {
+.warning-item>td:first-child .warning-item-item {
   display: block;
 }
 
-.last-update>td:first-child>div {
+.warning-item>td:first-child>div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
