--- a/public/css/pages/employees/index/page-employees.css
+++ b/public/css/pages/employees/index/page-employees.css
@@ -381,6 +381,20 @@ table.dataTable.display > tbody > tr:nth-child(odd) > * {
           box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0);
 }
 
+.daterangepicker {
+  width: auto !important;
+}
+
+.daterangepicker .drp-calendars {
+  display: flex;
+  flex-direction: row;
+}
+
+.daterangepicker .drp-calendar {
+  float: none !important;
+  clear: none !important;
+}
+
 .daterangepicker .drp-buttons .btn.btn-primary {
   --bs-btn-bg: #3585f5;
   --bs-btn-border-color: #3585f5;
