--- a/public/css/pages/properties/create/page-create.css
+++ b/public/css/pages/properties/create/page-create.css
@@ -2573,6 +2573,7 @@ div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
 }
 
 .photo-info-item {
+  position: relative;
   max-width: 105px;
   width: 100%;
   display: -webkit-box;
@@ -2822,6 +2823,32 @@ div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
   -webkit-transform: rotate(5deg);
   -ms-transform: rotate(5deg);
   transform: rotate(5deg);
+}
+
+.main-photo-badge {
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  background: #3585f5;
+  color: #fff;
+  font-size: 9px;
+  font-weight: 600;
+  padding: 2px 6px;
+  border-radius: 4px;
+  z-index: 2;
+  pointer-events: none;
+  white-space: nowrap;
+  line-height: 1.3;
+}
+
+.btn-move {
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.btn-move:active {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
 }
 
 .photo-info-item {
