--- a/public/css/pages/properties/index/page-home.css
+++ b/public/css/pages/properties/index/page-home.css
@@ -746,8 +746,7 @@ div.dt-container div.dt-layout-row div.dt-layout-cell.dt-layout-end {
   display: none;
   position: absolute;
   left: 60px;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 60px;
   z-index: 9999;
   padding: 4px;
   background: #fff;
